objects/PC_WorkCaseDistributionConfig__c.object
<CustomObject>
    <description>Work Case Distribution Config is a custom object in Patient Connect that represents the configuration needed for work case distribution.</description>
    <fields>
        <fullName>PC_AssignmentLookupField__c</fullName>
        <description>The look up field of the associated object. 
Syntax is &lt;Object Name&gt;.&lt;Field Name&gt;</description>
        <label>Assignment Lookup Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_AssignmentType__c</fullName>
        <description>Name of the associated object for a specific work case distribution.</description>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Program Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_AssociationRole__c</fullName>
        <description>Name of the role associated to the region.</description>
        <label>Association Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HCO</fullName>
                </value>
                <value>
                    <fullName>Treating Physician</fullName>
                </value>
                <value>
                    <fullName>Care Coordinator</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_EngagementProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the associated engagement program.</description>
        <label>Engagement Program</label>
        <referenceTo>PC_Engagement_Program__c</referenceTo>
        <relationshipLabel>Work Case Distribution Configs</relationshipLabel>
        <relationshipName>WorkCaseDistributionConfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Case Distribution Config</label>
    <listViews>
        <fullName>PC_All</fullName>
        <columns>NAME</columns>
        <columns>PC_EngagementProgram__c</columns>
        <columns>PC_AssignmentType__c</columns>
        <columns>PC_AssociationRole__c</columns>
        <columns>PC_AssignmentLookupField__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WCD{0}</displayFormat>
        <label>Work Case Distribution Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Case Distribution Configs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>